[tool.poetry]
name = "simulator"
version = "0.1.0"
description = ""
authors = ["Imene KOLLI <53266529+imene-swaan@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "simulator"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.3"
pygame = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
